--- a/scss/contact.me/_touch-section.scss
+++ b/scss/contact.me/_touch-section.scss
@@ -1,5 +1,6 @@
 .touch-section {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding-top: 48px;
   padding-bottom: 48px;
