--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ h1 {
  */
 hr {
   -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -83,7 +83,7 @@ abbr[title] {
   text-decoration: underline;
   /* 2 */
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -231,7 +231,7 @@ fieldset {
  */
 legend {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -266,7 +266,7 @@ textarea {
 [type="checkbox"],
 [type="radio"] {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -342,16 +342,18 @@ template {
 }
 
 @font-face {
-  font-family: 'Ibarra Real Nova';
-  src: url("IbarraRealNova-Bold.woff2") format("woff2"), url("IbarraRealNova-Bold.woff") format("woff");
+  font-family: "Ibarra Real Nova";
+  src: url("IbarraRealNova-Bold.woff2") format("woff2"),
+    url("IbarraRealNova-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Public Sans';
-  src: url("PublicSans-Regular.woff2") format("woff2"), url("PublicSans-Regular.woff") format("woff");
+  font-family: "Public Sans";
+  src: url("PublicSans-Regular.woff2") format("woff2"),
+    url("PublicSans-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -360,7 +362,7 @@ template {
 /* GENERAL */
 html {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   height: 100%;
   scroll-behavior: smooth;
 }
@@ -369,7 +371,7 @@ html {
 *::before,
 *::after {
   -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
@@ -378,15 +380,15 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   height: 100%;
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  font-family: '$font-Public',"Arial", sans-serif;
-  background-color: #F2F2F2;
-  color: #33323D;
+  font-family: "$font-Public", "Arial", sans-serif;
+  background-color: #f2f2f2;
+  color: #33323d;
 }
 
 img {
@@ -434,11 +436,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-top: 64px;
   padding-bottom: 54px;
 }
@@ -482,7 +484,7 @@ img {
 }
 
 .header__item-link-first-child {
-  color: #5FB4A2;
+  color: #5fb4a2;
 }
 
 .header__button {
@@ -540,7 +542,7 @@ img {
 
 .about-us__picture {
   -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
 }
 
 .about-us__section-heading {
@@ -569,7 +571,7 @@ img {
   letter-spacing: 2px;
   text-transform: uppercase;
   text-decoration: none;
-  color: #33323D;
+  color: #33323d;
   padding: 17px 36px 17px 32px;
   border: 1px solid #33323d;
 }
@@ -617,8 +619,8 @@ img {
   .about-us {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
   .about-us__section {
     margin-left: auto;
@@ -645,15 +647,16 @@ img {
 @media only screen and (max-width: 786px) and (max-width: 375px) {
   .about-us__picture {
     margin-bottom: 32px;
+    flex-shrink: 0;
   }
   .about-us {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
   .about-us__section {
     max-width: 311px;
@@ -678,7 +681,7 @@ img {
   letter-spacing: 2px;
   text-transform: uppercase;
   text-decoration: none;
-  color: #33323D;
+  color: #33323d;
   padding: 17px 36px 17px 32px;
   border: 1px solid #33323d;
 }
@@ -688,11 +691,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-top: 150px;
   padding-bottom: 150px;
 }
@@ -723,8 +726,8 @@ img {
   .contact-me {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     margin: 0 auto;
     padding-top: 135px;
     padding-bottom: 90px;
@@ -739,8 +742,8 @@ img {
   .contact-me {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     margin: 0 auto;
     padding-top: 115px;
     padding-bottom: 80px;
@@ -752,7 +755,7 @@ img {
 }
 
 .footer {
-  background-color: #33323D;
+  background-color: #33323d;
 }
 
 .footer__container {
@@ -760,11 +763,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -776,7 +779,7 @@ img {
 }
 
 .footer__link {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .footer__button {
@@ -805,11 +808,11 @@ img {
   .footer__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
   .footer__nav {
     margin: 0 auto;
@@ -828,11 +831,11 @@ img {
   .footer__list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     margin-bottom: -32px;
   }
   .footer__item {
@@ -851,11 +854,11 @@ img {
   .footer__list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     margin-bottom: -32px;
   }
   .footer__item {
@@ -871,15 +874,17 @@ img {
   background-image: url(/img/background-img-1x.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 243px;
   padding-right: 665px;
   margin-bottom: 150px;
+  position: relative;
 }
 
 .website-section__texts {
-  background-color: #FAFAFA;
+  position: absolute;
+  background-color: #fafafa;
   max-width: 445px;
   width: 100%;
+  margin-top: -360px;
 }
 
 .website-section__heading {
@@ -887,7 +892,7 @@ img {
   width: 100%;
   margin: 0;
   padding: 0;
-  padding-top: 56px;
+  padding-top: -156px;
   padding-right: 53px;
   margin-bottom: 53px;
   font-family: "Ibarra Real Nova";
@@ -903,7 +908,7 @@ img {
 
 .website-section__img-text {
   padding: 16px 22px 16px 22px;
-  background-color: #203A4C;
+  background-color: #203a4c;
 }
 
 .website-section__link {
@@ -912,9 +917,9 @@ img {
   text-align: center;
   letter-spacing: 2px;
   text-transform: uppercase;
-  background-color: #203A4C;
+  background-color: #203a4c;
   opacity: 0.9;
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
   padding-top: 17px;
   padding-bottom: 17px;
@@ -923,12 +928,6 @@ img {
 }
 
 @media only screen and (max-width: 786px) {
-  .website-section {
-    background-image: url(/img/backgroud-img-tablet1x.jpg);
-    padding-top: 322px;
-    padding-right: 174px;
-    margin-bottom: 96px;
-  }
   .website-section__texts {
     max-width: 514px;
     width: 100%;
@@ -945,11 +944,6 @@ img {
 }
 
 @media only screen and (max-width: 375px) {
-  .website-section {
-    background-image: url(/img/background-img-mobile1x.jpg);
-    padding: 0;
-    padding-top: 271px;
-  }
   .website-section__texts {
     max-width: 514px;
     width: 100%;
@@ -970,8 +964,8 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding-top: 48px;
   padding-bottom: 48px;
   border-top: 2px solid rgba(51, 50, 61, 0.15);
@@ -1036,7 +1030,7 @@ img {
   border: 1px solid #ccc;
   border-radius: 4px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin-top: 8px;
   margin-bottom: 16px;
   resize: vertical;
@@ -1054,7 +1048,7 @@ img {
   border: 1px solid #ccc;
   border-radius: 4px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin-top: 8px;
   margin-bottom: 16px;
   resize: vertical;
@@ -1071,7 +1065,7 @@ img {
   border: 1px solid #ccc;
   border-radius: 4px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin-top: 8px;
   margin-bottom: 16px;
   resize: vertical;
@@ -1086,8 +1080,8 @@ img {
   text-align: center;
   letter-spacing: 2px;
   text-transform: uppercase;
-  background-color: #203A4C;
-  color: #FFFFFF;
+  background-color: #203a4c;
+  color: #ffffff;
   padding: 17px 24px 17px 24px;
 }
 /*# sourceMappingURL=main.css.map */
