--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,8 +1,8 @@
-@import 'container';
-@import 'visually-hidden';
-@import 'header';
-@import 'about-us';
-@import 'primary--link';
-@import 'contact-me';
-@import 'footer';
-@import 'website-section';
+@import "container";
+@import "visually-hidden";
+@import "header";
+@import "about-us";
+@import "primary--link";
+@import "contact-me";
+@import "footer";
+@import "website-section";
