--- a/scss/blocks/_website-section.scss
+++ b/scss/blocks/_website-section.scss
@@ -1,28 +1,22 @@
-.website-section {
-  background-image: url(/img/background-img-1x.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 243px;
-  padding-right: 665px;
-  margin-bottom: 150px;
-}
 .website-section__texts {
   background-color: $color-white;
   max-width: 445px;
   width: 100%;
+  margin-top: -360px;
 }
 .website-section__heading {
   max-width: 390px;
   width: 100%;
   margin: 0;
   padding: 0;
-
-  padding-top: 56px;
   padding-right: 53px;
   margin-bottom: 53px;
   font-family: $Ibarra-Real-Nova;
   font-size: 50px;
   line-height: 50px;
+}
+.about-us__img {
+  flex-shrink: 0;
 }
 .website-section__desc {
   display: flex;
@@ -48,44 +42,46 @@
 }
 
 @include breakpoint-down(786px) {
-  .website-section {
-    background-image: url(/img/backgroud-img-tablet1x.jpg);
-
-    padding-top: 322px;
-    padding-right: 174px;
-    margin-bottom: 96px;
-  }
   .website-section__texts {
-    max-width: 514px;
+    max-width: 450px;
     width: 100%;
   }
   .website-section__heading {
-    max-width: 458px;
+    max-width: 418px;
     width: 100%;
     padding-top: 56px;
     padding-right: 56px;
-    margin-bottom: 48px;
-    font-size: 40px;
-    line-height: 42px;
+    margin-bottom: 53px;
+    font-size: 36px;
+    line-height: 37px;
+    margin-top: 280px;
   }
 }
 @include breakpoint-down(375px) {
-  .website-section {
-    background-image: url(/img/background-img-mobile1x.jpg);
-    padding: 0;
-    padding-top: 271px;
-  }
   .website-section__texts {
-    max-width: 514px;
     width: 100%;
+    max-width: 311px;
+    margin: 0;
+    padding: 0;
+    margin-top: 28px;
   }
   .website-section__heading {
-    max-width: 458px;
     width: 100%;
+    max-width: 311px;
     padding-top: 56px;
     padding-right: 56px;
     margin-bottom: 48px;
     font-size: 40px;
     line-height: 42px;
+  }
+  .website-section {
+    margin: 0;
+    padding: 0;
+    margin-top: 48px;
+    margin-bottom: 96px;
+  }
+  .website-section__desc {
+    width: 100%;
+    max-width: 200px;
   }
 }
